<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EV Tracker</string>
    
    <string name="list_pokemon_name">Pokemon</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="games_title">EV Tracker</string>
    <string name="pokemon_list_title">Pokemon</string>
    <string name="pokedex_title">Pokedex</string>
    <string name="pokedex">Pokedex</string>
    <string name="social">Social</string>
    
    <string name="hp">HP</string>
    <string name="atk">Attack</string>
    <string name="def">Defense</string>
    <string name="spatk">Sp. Atk</string>
    <string name="spdef">Sp. Def</string>
    <string name="speed">Speed</string>
    
    <string name="default_ev">0/255</string>
    <string name="default_total">0/510</string>
    <string name="total_ev">Total EV\'s</string>
    
    <string name="recent_battles">Times Battled</string>
    
    <string name="battled">Battled Pokemon</string>
    <string name="new_game">New Game</string>
    <string name="new_pokemon">New Pokemon</string>
    <string name="fix">Fix Effort Values</string>
    <string name="no_games">You have no games</string>
    <string name="no_pokemon">No tracked pokemon</string>
    
    <!-- Menu Items -->
    <string name="delete_pokemon">Delete Pokemon</string>
    <string name="delete_game">Delete Game</string>
    <string name="items">Items</string>
    
    <!-- EV Items -->
    <string name="pkrs">PKRS</string>
    <string name="macho_brace">Macho Brace</string>
    <string name="power_weight">Power Weight</string>
    <string name="power_anklet">Power Anklet</string>
    <string name="power_band">Power Band</string>
    <string name="power_belt">Power Belt</string>
    <string name="power_lens">Power Lens</string>
    <string name="power_bracer">Power Bracer</string>
    
    <string name="calcium">Calcium</string>
    <string name="carbos">Carbos</string>
    <string name="hp_up">HP Up</string>
    <string name="iron">Iron</string>
    <string name="protein">Protein</string>
    <string name="zinc">Zinc</string>
    <string name="apply">Apply</string>
    
    <!-- EV Fix -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    
    <!-- Ads -->
    <string name="ad_unit_id">a152d95264c813e</string>
    <string name="test_ad_unit">B3EEABB8EE11C2BE770B684D95219ECB</string>
    
    <!-- Social -->
    <string name="social">Social</string>
    <string name="social_facebook">Like or Follow EV Tracker for updates on the latest bug fixes and features that are coming soon.</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

</resources>
