<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" >
    
    <ImageView
        android:id="@+id/pokemon_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:background="@color/Light_Gray"
        android:contentDescription="@string/pokemon_image" />
    
    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/pokemon_image"
        android:paddingLeft="7dp"
        android:text="@string/list_pokemon_name"
        android:textColor="@color/White"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ev1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pokemon_name"
        android:layout_below="@+id/pokemon_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="7dp"
        android:text="@string/atk"
        android:textColor="@color/White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ev1_label"
        android:layout_below="@+id/ev1_label"
        android:layout_marginLeft="7dp"
        android:text="@string/default_ev"
        android:textColor="@color/White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ev2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pokemon_name"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/ev1_label"
        android:text="@string/atk"
        android:textColor="@color/White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ev3_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pokemon_name"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/ev2_label"
        android:text="@string/atk"
        android:textColor="@color/White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ev2_label"
        android:layout_below="@+id/ev2_label"
        android:text="@string/default_ev"
        android:textColor="@color/White"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ev3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ev3_label"
        android:layout_below="@+id/ev3_label"
        android:text="@string/default_ev"
        android:textColor="@color/White"
        android:visibility="invisible" />
    
</RelativeLayout>
